# num_process

.github/workflows/: num_process_ci.yml
install/: local_setup.sh  setup.sh
install/my_algorithms/lib/my_algorithms/: number_processor  number_publisher
install/my_algorithms/share/my_algorithms/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_interfaces/include/my_interfaces/my_interfaces/srv/detail/: process_num__functions.c  process_num__struct.hpp  process_num__type_support.c  process_num__type_support.cpp  process_num__type_support.h  process_num__type_support.hpp
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces/: _my_interfaces_s.ep.rosidl_typesupport_c.c
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces/msg/: __init__.py
install/my_interfaces/share/ament_index/resource_index/rosidl_interfaces/: my_interfaces
install/my_interfaces/share/my_interfaces/: local_setup.sh  package.sh
install/my_interfaces/share/my_interfaces/srv/: ProcessNum.idl  ProcessNum_Response.msg
install/my_testing/share/my_testing/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_test
src/my_algorithms/: setup.cfg  setup.py
src/my_algorithms/my_algorithms/: number_processor_node.py
src/my_interfaces/: CMakeLists.txt
src/my_interfaces/srv/: ProcessNum.srv
src/my_testing/: package.xml  setup.cfg  setup.py
src/my_testing/test/: test_integration.py  test_processor_service.py
(+1 files in other folders)
